# webextension-instagram

./: Cargo.toml  README.md
pkg/: launcher.js  manifest.json  package.json  wasm_instagram_bot.d.ts  wasm_instagram_bot.js  wasm_instagram_bot_bg.wasm
src/: lib.rs
