[package]
name = "wasm-instagram-bot"
version = "0.1.0"
authors = ["Mubelotix <unbeliever.in.time@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.28"

[dependencies.web-sys]
version = "0.3.28"
features = [
    'HtmlDivElement',
    'HtmlElement',
    'Element',
    'Window',
    'Location',
    'HtmlCollection',
    'Node',
    'XPathNsResolver',
    'XPathResult',
    'HtmlAnchorElement',
    'HtmlButtonElement',
    'console',
    'Document',
    'Event',
    'EventTarget',
    'HtmlAllCollection',
    'CssStyleDeclaration',
    'HtmlInputElement',
    'HtmlLabelElement',
    'HtmlStyleElement',
    'Storage'
]